# map_reduce

./: Cargo.toml  Makefile  README.md  build.rs
apps/: indexer.rs  libindexer.dylib  libwc.dylib  wc.rs
results/indexer/distributed/output/: mr-out-0  mr-out-1  mr-out-2  mr-out-3  mr-out-4  mr-out-5  mr-out-6  mr-out-7  mr-out-8  mr-out-9
results/wc/distributed/output/: mr-out-0  mr-out-1  mr-out-2  mr-out-3  mr-out-4  mr-out-5  mr-out-6  mr-out-7  mr-out-8  mr-out-9
src/: coordinator.rs  lib.rs  models.rs  rpc.rs  worker.rs
src/protos/: task.proto
