[package]
name = "map_reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sequential"
path = "bin/sequential.rs"

[[bin]]
name = "mrcoordinator"
path = "bin/mrcoordinator.rs"

[[bin]]
name = "mrworker"
path = "bin/mrworker.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
libloading = "0.8.0"
prost = "0.12.0"
tonic = "0.10.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
parking_lot = "0.12.1"
hash32 = "0.3.1"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.26"

[build-dependencies]
tonic-build = "0.10.0"

